--- a/estilo/style.css
+++ b/estilo/style.css
@@ -50,7 +50,6 @@ header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     min-height: 150px;
     text-align: center;
-    padding-top: 40px;
 }
 
 header > h1 {
@@ -60,6 +59,7 @@ header > h1 {
     font-size: 3em;
     font-weight: normal;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.267);
+    margin-bottom: 20px;
 }
 
 header > p {
